# AIGVDet

./: .dockerignore  .gitignore  DATA_SETUP.md  DOCKER_COMPARISON.md  DOCKER_INDEX.md  DOCKER_QUICKREF.md  DOCKER_USAGE.md  Dockerfile.cpu  Dockerfile.gpu  Dockerfile.gpu-alt  MIGRATION_SUMMARY.md  Makefile  README.md  WANDB_SETUP.md  build-docker.ps1  build-docker.sh  demo.py  docker-compose.yml  main.py  push-docker.ps1  push-docker.sh  push-simple.ps1  pyproject.toml  requirements.txt  train.py
core/utils1/: config.py  datasets.py  earlystop.py  eval.py  trainer.py
